# xor-cipher-crate

./: CHANGELOG.md  Cargo.toml  README.md  changelogging.toml
changes/: 1.change.md  2.change.md  3.change.md
src/: in_place.rs  lib.rs
